force-app/main/default/objects/Case/fields/ABN_LESS__c.field-meta.xml
<CustomField>
    <fullName>ABN_LESS__c</fullName>
    <description>Applies to elective terminations of pregnancy and fetal reductions due to fetal abnormality. Specify as much detail as possible.</description>
    <label>ANZARD - Fetal abnormality in a pregnanc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>