force-app/main/default/objects/Case/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>CONTAINS(&quot;Waiting to Start,In Cycle,WFPR&quot;, Sub_Status_Text_Field__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>