force-app/main/default/objects/Case/fields/Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email__c</fullName>
    <formula>&quot;info@compassfertility.com.au&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Email</label>
    <type>Text</type>
</CustomField>