force-app/main/default/objects/Case/fields/ANZARD_Number_of_Vit_Blast_Thawed__c.field-meta.xml
<CustomField>
    <fullName>ANZARD_Number_of_Vit_Blast_Thawed__c</fullName>
    <label>ANZARD - Number of Vit Blast Thawed</label>
    <summarizedField>Cycle_Event__c.Number_of_Embryos_Thawed__c</summarizedField>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>