force-app/main/default/objects/Case/fields/ART_REASON__c.field-meta.xml
<CustomField>
    <fullName>ART_REASON__c</fullName>
    <description>Applies to female-male couples only. Determine if the ART treatment is being undertaken for reasons other than to treat clinical infertility (e.g. chromosomal matching, HLA testing and fertility preservation (medical or non-social).</description>
    <label>ANZARD - Reason for ART treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_YES_NO</valueSetName>
    </valueSet>
</CustomField>