force-app/main/default/objects/Case/fields/ASS_HATC__c.field-meta.xml
<CustomField>
    <fullName>ASS_HATC__c</fullName>
    <description>Identify whether the embryos’ zona pellucida were thinned to facilitate embryo hatching.</description>
    <label>ANZARD - Assisted hatching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
                <default>true</default>
                <label>n = No</label>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>