force-app/main/default/objects/Case/fields/BAB1_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB1_ABN__c</fullName>
    <description>If present, record any information about the congenital malformation of the first-born baby.</description>
    <label>ANZARD - Abnormalities in first-born bab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>