force-app/main/default/objects/Case/fields/BAB1_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB1_NND__c</fullName>
    <description>If the first-born baby died within 28 days of birth, record the date of neonatal death.</description>
    <label>ANZARD - Date of neonatal death of first</label>
    <type>Date</type>
</CustomField>