force-app/main/default/objects/Case/fields/BAB1_SEX__c.field-meta.xml
<CustomField>
    <fullName>BAB1_SEX__c</fullName>
    <description>Sex of the first-born baby. Every attempt must be made to obtain this information.</description>
    <label>ANZARD - Sex of first-born baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m = Male</fullName>
            </value>
            <value>
                <fullName>f = Female</fullName>
            </value>
            <value>
                <fullName>u = sex unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>