force-app/main/default/objects/Case/fields/BAB2_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB2_ABN__c</fullName>
    <description>If present, record any information about the congenital malformation of the second- born baby.</description>
    <label>ANZARD - Abnormalities in second-born ba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>