force-app/main/default/objects/Case/fields/BAB2_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB2_NND__c</fullName>
    <description>If the second-born baby died within 28 days of birth, record the date of neonatal death.</description>
    <label>ANZARD - Date of neonatal death of secon</label>
    <type>Date</type>
</CustomField>