force-app/main/default/objects/Case/fields/BAB2_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB2_WT__c</fullName>
    <description>Birthweight (in grams) of the second-born baby. Every attempt must be made to obtain this information.</description>
    <label>ANZARD - Birthweight of second-born baby</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>