force-app/main/default/objects/Case/fields/BAB3_ABN__c.field-meta.xml
<CustomField>
    <fullName>BAB3_ABN__c</fullName>
    <description>If present, record any information about the congenital malformation of the third-born baby.</description>
    <label>ANZARD - Abnormalities in third-born bab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>