force-app/main/default/objects/Case/fields/BAB3_NND__c.field-meta.xml
<CustomField>
    <fullName>BAB3_NND__c</fullName>
    <description>Record the date of death of the third-born baby if the death occurred within 28 days after birth.</description>
    <label>ANZARD - Date of neonatal death of third</label>
    <type>Date</type>
</CustomField>