force-app/main/default/objects/Case/fields/BAB3_OUT__c.field-meta.xml
<CustomField>
    <fullName>BAB3_OUT__c</fullName>
    <description>Outcome of the third-born baby. Every attempt must be made to obtain this information.</description>
    <label>ANZARD - Outcome of third- born baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>s = Stillbirth</fullName>
            </value>
            <value>
                <fullName>l = Livebirth/Survived</fullName>
            </value>
            <value>
                <fullName>n = Livebirth/Died &lt; 28 days (neonatal death)</fullName>
            </value>
            <value>
                <fullName>u = baby born but outcome unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>