force-app/main/default/objects/Case/fields/BAB3_WT__c.field-meta.xml
<CustomField>
    <fullName>BAB3_WT__c</fullName>
    <description>Birthweight (in grams) of the third-born baby. Every attempt must be made to obtain this information.</description>
    <label>ANZARD - Birthweight of third-born baby</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>