force-app/main/default/objects/Case/fields/Backup_Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Backup_Sperm_Source__c</fullName>
    <label>Backup Sperm Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ejaculate</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>TESA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>