force-app/main/default/objects/Case/fields/Biopsy_Cycle_Event_Completed__c.field-meta.xml
<CustomField>
    <fullName>Biopsy_Cycle_Event_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biopsy Cycle Event Completed</label>
    <type>Checkbox</type>
</CustomField>