force-app/main/default/objects/Case/fields/Blood_Tests_Review__c.field-meta.xml
<CustomField>
    <fullName>Blood_Tests_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blood Tests Review</label>
    <type>Checkbox</type>
</CustomField>