force-app/main/default/objects/Case/fields/CAN_DATE__c.field-meta.xml
<CustomField>
    <fullName>CAN_DATE__c</fullName>
    <description>If the cycle was cancelled before OPU, enter the last date that FSH was administered.
Otherwise, leave the field blank.</description>
    <label>ANZARD - The date the cycle was cancelle</label>
    <type>Date</type>
</CustomField>