force-app/main/default/objects/Case/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>