force-app/main/default/objects/Case/fields/Cancelled_Reason_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason_Picklist__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor stim/under stim</fullName>
            </value>
            <value>
                <fullName>Hyper stim</fullName>
            </value>
            <value>
                <fullName>Medication error</fullName>
            </value>
            <value>
                <fullName>Patient unwell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>