force-app/main/default/objects/Case/fields/CI_ENDO__c.field-meta.xml
<CustomField>
    <fullName>CI_ENDO__c</fullName>
    <description>For female intending parent only (where PARENT_SEX = female-male couple); captures whether cause of infertility is due to endometriosis.</description>
    <label>ANZARD - Cause of Infertility due to end</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>