force-app/main/default/objects/Case/fields/CI_MALE__c.field-meta.xml
<CustomField>
    <fullName>CI_MALE__c</fullName>
    <description>For male intending parents only (where PARENT_SEX =female- male couple); captures whether cause of infertility is due to male factors.</description>
    <label>ANZARD - Cause of infertility due to mal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>