force-app/main/default/objects/Case/fields/CI_OTH__c.field-meta.xml
<CustomField>
    <fullName>CI_OTH__c</fullName>
    <description>For female intending parent (where PARENT_SEX = female-male couple); captures whether cause of infertility is due to other female factors apart from endometriosis and tubal disease.</description>
    <label>ANZARD - Cause of infertility due to oth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>