force-app/main/default/objects/Case/fields/CI_TUBE__c.field-meta.xml
<CustomField>
    <fullName>CI_TUBE__c</fullName>
    <description>For female intending parent (where PARENT_SEX=female- male couple) only; captures whether cause of infertility is due to tubal disease</description>
    <label>ANZARD - Cause of Infertility due to tub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>