force-app/main/default/objects/Case/fields/CI_UNEX__c.field-meta.xml
<CustomField>
    <fullName>CI_UNEX__c</fullName>
    <description>This data item should only be completed where PARENT_SEX = female-male couple.
In the opinion of the treating clinician, the cause of infertility is unexplained in the intending parents.</description>
    <label>ANZARD - Cause of infertility is unexpla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n = No</fullName>
            </value>
            <value>
                <fullName>y = Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>