force-app/main/default/objects/Case/fields/COMMENT__c.field-meta.xml
<CustomField>
    <fullName>COMMENT__c</fullName>
    <description>Record additional comments or further explanations related to the treatment provided in the cycle or outcomes as a result of treatment.</description>
    <label>ANZARD - Additional comments about the c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>