force-app/main/default/objects/Case/fields/Compass_Consent__c.field-meta.xml
<CustomField>
    <fullName>Compass_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass Consent</label>
    <referenceTo>Consent_Compass__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>