force-app/main/default/objects/Case/fields/Compass_Doctor_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor_as_Text__c</fullName>
    <formula>Doctor_Initiating_Cycle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Doctor as Text</label>
    <type>Text</type>
</CustomField>