force-app/main/default/objects/Case/fields/Compass_Doctor_Email__c.field-meta.xml
<CustomField>
    <fullName>Compass_Doctor_Email__c</fullName>
    <formula>Doctor_Initiating_Cycle__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compass Doctor Email</label>
    <type>Text</type>
</CustomField>