force-app/main/default/objects/Case/fields/Consents_Signed__c.field-meta.xml
<CustomField>
    <fullName>Consents_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consents Signed?</label>
    <type>Checkbox</type>
</CustomField>