force-app/main/default/objects/Case/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>Contact.MailingStreet&amp;&quot; &quot;&amp;Contact.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Contact.MailingState&amp;&quot; &quot;&amp;Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>