force-app/main/default/objects/Case/fields/Count_of_Valid_Cycle_Consents__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Valid_Cycle_Consents__c</fullName>
    <label>Count of Valid Cycle Consents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>