force-app/main/default/objects/Case/fields/Create_New_Result__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create New Result</label>
    <type>Checkbox</type>
</CustomField>