force-app/main/default/objects/Case/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <description>Regardless whether caesarean section was planned or not, indicate whether at least one baby was born by caesarean section.
If any baby of a multiple birth is a caesarean section delivery, enter ‘y’</description>
    <label>ANZARD - Caesarean birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_NO_YES_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>