force-app/main/default/objects/Case/fields/Current_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Cycle_Day__c</fullName>
    <formula>IF(ISBLANK(TODAY() - Day_1__c+1)=TRUE,-100,TODAY() - Day_1__c+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>