force-app/main/default/objects/Case/fields/CYC_DATE__c.field-meta.xml
<CustomField>
    <fullName>CYC_DATE__c</fullName>
    <description>&quot;Record the date that the treatment cycle or lab-only cycle began using the following rules:
1.  The first date where FSH/stimulation drug was administered
or
2.  The date of Last Menstrual Period (LMP) for unstimulated cycles (including natural fresh cycles, thaw cycles and donor insemination)
or
3.  The date of oocyte/embryo thawing for lab-only cycles&quot;</description>
    <label>ANZARD - The date when a cycle started</label>
    <type>Date</type>
</CustomField>