force-app/main/default/objects/Case/fields/Cycle_Days_Created__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Days_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Days Created</label>
    <type>Checkbox</type>
</CustomField>