force-app/main/default/objects/Case/fields/CYCLE_ID__c.field-meta.xml
<CustomField>
    <fullName>CYCLE_ID__c</fullName>
    <description>Uniquely identifies each cycle (record).</description>
    <label>ANZARD - The cycle identification number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>