force-app/main/default/objects/Case/fields/Cycle_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Name__c</fullName>
    <formula>Contact.LastName &amp; &quot; - &quot; &amp;  Contact.Patient_Id__c  &amp; &quot; - &quot; &amp;  RecordType.Name &amp; &quot; &quot;&amp; text(Egg_Freeze_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Name</label>
    <type>Text</type>
</CustomField>