force-app/main/default/objects/Case/fields/Cycle_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Outcome__c</fullName>
    <label>Cycle Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Pregnant</fullName>
            </value>
            <value>
                <fullName>Cycle Cancelled</fullName>
            </value>
            <value>
                <fullName>Positive BHCG</fullName>
            </value>
            <value>
                <fullName>Clinical Pregnancy</fullName>
            </value>
            <value>
                <fullName>Live Birth</fullName>
            </value>
            <value>
                <fullName>No Transfer</fullName>
            </value>
            <value>
                <fullName>Freeze All</fullName>
            </value>
            <value>
                <fullName>WFPR</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Got Period</fullName>
            </value>
            <value>
                <fullName>Still Birth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>