force-app/main/default/objects/Case/fields/Cycle_Price__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Price__c</fullName>
    <label>Cycle Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>