force-app/main/default/objects/Case/fields/Cycle_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Record Type Name</label>
    <type>Text</type>
</CustomField>