force-app/main/default/objects/Case/fields/Cycle_Timing__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Timing__c</fullName>
    <label>Cycle Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Lead In OCP</fullName>
            </value>
            <value>
                <fullName>Lead In Primolut</fullName>
            </value>
            <value>
                <fullName>Random Start</fullName>
            </value>
            <value>
                <fullName>Provera</fullName>
            </value>
            <value>
                <fullName>Post Zoladex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>