force-app/main/default/objects/Case/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <label>Cycle Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>