force-app/main/default/objects/Case/fields/CYCLE_TYPE_c__c.field-meta.xml
<CustomField>
    <fullName>CYCLE_TYPE_c__c</fullName>
    <label>ANZARD - The type of cycle that took pla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Autologous: Female-male couple, single female, female- female</fullName>
            </value>
            <value>
                <fullName>2 = Non-autologous: Female-female couple</fullName>
            </value>
            <value>
                <fullName>3 = Non-autologous: Oocyte/embryo donation</fullName>
            </value>
            <value>
                <fullName>4 = Non-autologous: Oocyte recipient</fullName>
            </value>
            <value>
                <fullName>5 = Non-autologous: Embryo recipient</fullName>
            </value>
            <value>
                <fullName>6 = Surrogacy – intending parent(s): Oocyte/embryo provision</fullName>
            </value>
            <value>
                <fullName>7 = Surrogacy – gestational carrier: Transfer (or thawing with the intention of transfer) of embryos to a gestational carrier</fullName>
            </value>
            <value>
                <fullName>8 = Laboratory only cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>