force-app/main/default/objects/Case/fields/Cycle_Type_Creates_Embryos__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_Creates_Embryos__c</fullName>
    <formula>IF( RecordType.Name = &apos;IVF Cycle&apos;||RecordType.Name =&apos;VOT Cycle&apos;||RecordType.Name =&apos;Fresh Egg Donor Cycle&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Type Creates Embryos</label>
    <type>Checkbox</type>
</CustomField>