force-app/main/default/objects/Case/fields/Date_of_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Adverse_Event__c</fullName>
    <label>Date of Adverse Event</label>
    <type>Date</type>
</CustomField>