force-app/main/default/objects/Case/fields/Date_of_IUI__c.field-meta.xml
<CustomField>
    <fullName>Date_of_IUI__c</fullName>
    <label>Date of IUI</label>
    <summarizedField>Cycle_Event__c.Procedure_Date_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Cycle_Event__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>IUI</value>
    </summaryFilterItems>
    <summaryForeignKey>Cycle_Event__c.Cycle__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>