force-app/main/default/objects/Case/fields/DATE_TTC__c.field-meta.xml
<CustomField>
    <fullName>DATE_TTC__c</fullName>
    <label>ANZARD - Date Trying to Conceive</label>
    <type>Date</type>
</CustomField>