force-app/main/default/objects/Case/fields/Day_1_Cycle_Event__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Cycle_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 1 Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>