force-app/main/default/objects/Case/fields/Day_6_Assessment_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Day_6_Assessment_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 6 Assessment Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>