force-app/main/default/objects/Case/fields/Days_on_FSH__c.field-meta.xml
<CustomField>
    <fullName>Days_on_FSH__c</fullName>
    <label>Days on FSH</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>