force-app/main/default/objects/Case/fields/Deg_From_Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Deg_From_Embryo_Batch__c</fullName>
    <formula>Embryo_Batch__r.Deg__c</formula>
    <label>Deg From Embryo Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>