force-app/main/default/objects/Case/fields/Denuding_Cycle_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Denuding_Cycle_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denuding Cycle Event Created</label>
    <type>Checkbox</type>
</CustomField>