force-app/main/default/objects/Case/fields/Developer_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_Record_ID__c</fullName>
    <formula>LEFT( Id ,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Record ID</label>
    <type>Text</type>
</CustomField>