force-app/main/default/objects/Case/fields/Doctor_Initiating_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Initiating_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Initiating Cycle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Doctor__c.Doctor_Type__c</field>
            <operation>equals</operation>
            <value>Compass Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>