force-app/main/default/objects/Case/fields/Doctors_Treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Treatment_Notes__c</fullName>
    <label>Doctors Treatment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>