force-app/main/default/objects/Case/fields/DON_AGE__c.field-meta.xml
<CustomField>
    <fullName>DON_AGE__c</fullName>
    <description>In the case of oocyte or embryo donation/provision, enter the female provider’s age at the time their applicable OPU occurred.</description>
    <label>ANZARD - Age (in years) of the oocyte or</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>